vendor/ouroboros/examples/src/fail_tests/borrow_before_declaration.stderr
error: Unknown identifier, make sure that it is spelled correctly and defined above the location it is borrowed.
 --> $DIR/borrow_before_declaration.rs:5:15
  |
5 |     #[borrows(a)]
  |               ^
