vendor/ouroboros/examples/src/fail_tests/borrow_before_declaration.rs
use ouroboros::self_referencing;

#[self_referencing]
struct S {
    #[borrows(a)]
    b: &'this i32,
    a: Box<i32>,
}

fn main() { }
